test/sockshop-load-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-test
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-test
  template:
    metadata:
      labels:
        app: load-test
    spec:
      containers:
        - name: load-test
          image: weaveworksdemos/load-test:0.1.1
          args:
            - "-h"
            - "front-end:80"
            - "-c"
            - "10"
            - "-r"
            - "1000000"
