test/testdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-test-client
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-test-client
  template:
    metadata:
      labels:
        app: http-test-client
    spec:
      containers:
      - name: client
        image: curlimages/curl:latest
        command: ["/bin/sh"]
        args:
        - -c
        - |
          while true; do
            echo "Making request to httpbin..."
            curl -s http://httpbin.default.svc.cluster.local/get
            echo "Making request to external site..."
            curl -s http://example.com
            sleep 5
          done
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: default
spec:
  selector:
    app: httpbin
  ports:
  - port: 80
    targetPort: 80
